Option3 questionnaire connected with local stoarge
